src/objects/Service__c.object
<CustomObject>
    <description>Meta data about Charge Transactions</description>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Account Type</description>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>HB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPT_Code_Mods__c</fullName>
        <label>CPT Code Mods</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPT_Code_Override__c</fullName>
        <description>CPT Code</description>
        <label>CPT Code Override</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPT_Code__c</fullName>
        <label>CPT Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category</description>
        <label>Category</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Group__c</fullName>
        <description>Charge Group</description>
        <label>Charge Group</label>
        <referenceTo>Charge_Group__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code_Description__c</fullName>
        <description>Code Description</description>
        <label>Code Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Code</description>
        <label>Code</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>HTR ETR</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <description>Post Date</description>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Provider__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity</description>
        <label>Quantity</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <description>Service Date</description>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Rollup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Code</label>
        <referenceTo>Service_Rollup__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>